fix overflow x axis in some elements to avoid 'overflow-x: hidden;'

--- a/assets/components/header-component/header.css
+++ b/assets/components/header-component/header.css
@@ -6,7 +6,7 @@
     padding: 1rem 2rem;
     background-color: var(--header-bg-color);
     color: #000;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     z-index: 1000;
