--- a/assets/css/nosotros.css
+++ b/assets/css/nosotros.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: fill;
-    width: 100vw;
+    width: 100%;
     height: 400px;
     display: flex;
     justify-content: center;
@@ -25,7 +25,7 @@
     flex-direction: column;
     text-align: center;
     gap: 1rem;
-    width: 100vw;
+    width: 100%;
     /* padding: 1rem 2rem; */
 }
 
@@ -76,7 +76,8 @@
 
 .our-mission{
     text-align: center;
-    width: 100vw;
+    /* width: 100%; */
+    width: 100%;
     padding: 0 2rem;
     color: #fff;
     display: flex;
