--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -23,7 +23,7 @@
 
 @media (min-width: 787px){
     .product-bg-img-container{
-        width: 100vw;
+        width: 100%;
         height: 400px;
         aspect-ratio: 16/9;
     }
